--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -80,12 +80,12 @@ jobs:
         run: mvn clean package
         
       - name: Build Image
-        run: docker build -t registry ./backend
+        run: docker build -t discovery-finder ./backend
         
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: registry
+          image-ref: discovery-finder
           # ignore-unfixed: true
           exit-code: "1"
           hide-progress: false
