Fix trivy and kics scan * Adjust yml to build docker images correct * Adjust openapi yml with maxItem for array endpoint

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -80,7 +80,7 @@ jobs:
         run: mvn clean package
         
       - name: Build Image
-        run: docker build -t discovery-finder ./backend
+        run: docker build -t discovery-finder -f ./backend/Dockerfile .
         
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
