--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -88,6 +88,16 @@
       <dependency>
          <groupId>org.liquibase</groupId>
          <artifactId>liquibase-core</artifactId>
+         <exclusions>
+            <exclusion>
+               <groupId>org.yaml</groupId>
+               <artifactId>snakeyaml</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.yaml</groupId>
+         <artifactId>snakeyaml</artifactId>
       </dependency>
       <!-- Tests -->
       <dependency>
@@ -149,6 +159,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>${spring.boot.version}</version>
+            <configuration>
+               <excludes>
+                  <!--
+                      H2 is only used for local development.
+                      Exclusion is required because of this CVE: https://nvd.nist.gov/vuln/detail/CVE-2018-10054
+                   -->
+                  <exclude>
+                     <groupId>com.h2database</groupId>
+                     <artifactId>h2</artifactId>
+                  </exclude>
+               </excludes>
+            </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
