--- a/charts/discoveryfinder/Chart.yaml
+++ b/charts/discoveryfinder/Chart.yaml
@@ -22,7 +22,7 @@ description: Tractus-X Discovery Finder Helm Chart
 
 type: application
 version: 0.1.0
-appVersion: 0.1.0
+appVersion: 0.1.0-M1
 
 dependencies:
   - repository: https://charts.bitnami.com/bitnami
