--- a/backend/src/test/resources/application-onstartuptest.yml
+++ b/backend/src/test/resources/application-onstartuptest.yml
@@ -22,32 +22,27 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8181/realms/discovery-finder
+          issuer-uri:
   datasource:
     driverClassName: org.h2.Driver
-    password: tractusx
-    username: tractusx
-    url: jdbc:h2:file:./persistence/discoveryfinderdb;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+    url: jdbc:h2:mem:onstartuptestdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 
 discoveryfinder:
   publicClientId: discovery-finder-client
-  # initialEndpoints:
-  #  - type: "EDC"
-  #    endpointAddress: "https://"
-  #    description: ""
-  #    documentation: ""
+  initialEndpoints:
+    - type: "EDC"
+      endpointAddress: "https://edc.instance.de"
+      description: "https://dummy.swaggerui.de"
+      documentation: "swagger ui documentation"
+    - type: "EDC-1"
+      endpointAddress: "https://edc1.instance.de"
+      description: "https://dummy1.swaggerui.de"
+      documentation: "swagger ui documentation"
 
-# Properties develop against a postgres instance
-# You can start a postgres instance using the docker-compose file located in the backend/postgres/ directory
-# datasource:
-#  url: jdbc:postgresql://localhost:5432/postgres
-#  driverClassName: org.postgresql.Driver
-#  username: postgres
-#  password: example
+logging:
+  level:
+    org:
+      springframework:
+        jdbc:
+          core: TRACE
 
-h2:
-  console:
-    path: /admin/database
-    enabled: true
-    settings:
-      web-allow-others: true
