--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: discovery-finder
+          image-ref: "tractusx/sldt-discovery-finder:latest"
           # ignore-unfixed: true
           exit-code: "1"
           hide-progress: false
