--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -29,6 +29,12 @@ on:
         default: 'kindest/node:v1.24.6'
         required: false
         type: string
+      upgrade_from:
+        description: 'chart version to upgrade from'
+        # chart version from 3.1 release as default
+        default: '0.1.12'
+        required: false
+        type: string
 
 jobs:
   lint-test:
