--- a/charts/discoveryfinder/values.yaml
+++ b/charts/discoveryfinder/values.yaml
@@ -38,6 +38,7 @@ discoveryfinder:
   #        endpointAddress:
   #        description:
   #        documentation:
+  #        timeToLive:
   idp:
     issuerUri: https://idp-url
     publicClientId: idpClientID
