--- a/charts/discoveryfinder/values.yaml
+++ b/charts/discoveryfinder/values.yaml
@@ -1,5 +1,5 @@
-# Copyright (c) 2023 Robert Bosch Manufacturing Solutions GmbH
-# Copyright (c) 2023 Contributors to the Eclipse Foundation
+# Copyright (c) 2024 Robert Bosch Manufacturing Solutions GmbH
+# Copyright (c) 2024 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -77,5 +77,7 @@ postgresql:
       postgresql: 5432
   auth:
     username: catenax
-    password: password
+    password:
     database: discoveryfinder
+    # -- Secret contains passwords for username postgres.
+    existingSecret: secret-postgres-init
