--- a/charts/discoveryfinder/templates/deployment.yaml
+++ b/charts/discoveryfinder/templates/deployment.yaml
@@ -16,22 +16,22 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
-{{- $deployment_name := printf "cx-%s" .Release.Name }}
-{{- $sec_name := printf "%s-sec" $deployment_name }}
-{{- $svc_name := printf "%s-svc" $deployment_name }}
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ $deployment_name }}
+  name: {{ include "df.fullname" . }}
+  labels:
+    {{- include "df.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.discoveryfinder.replicaCount }}
   selector:
     matchLabels:
-      app: {{ $deployment_name }}
+      {{- include "df.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: {{ $deployment_name }}
+        {{- include "df.selectorLabels" . | nindent 8 }}
     spec:
       securityContext:
         runAsUser: 100
@@ -40,7 +40,7 @@ spec:
           configMap:
             name: properties-discoveryfinder
       containers:
-        - name: {{ $deployment_name }}
+        - name: {{ .Chart.Name }}
           image: {{ .Values.discoveryfinder.image.registry }}/{{ .Values.discoveryfinder.image.repository }}:{{ .Values.discoveryfinder.image.version | default .Chart.AppVersion }}
           imagePullPolicy: {{ .Values.discoveryfinder.image.imagePullPolicy }}
           volumeMounts:
@@ -60,19 +60,19 @@ spec:
             httpGet:
               path: /actuator/health/liveness
               port: {{ .Values.discoveryfinder.containerPort }}
-            initialDelaySeconds: 100
-            periodSeconds: 3
-            failureThreshold: 3
+            initialDelaySeconds: {{ .Values.discoveryfinder.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.discoveryfinder.livenessProbe.periodSeconds }}
+            failureThreshold: {{ .Values.discoveryfinder.livenessProbe.failureThreshold }}
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
               port: {{ .Values.discoveryfinder.containerPort }}
-            initialDelaySeconds: 60
-            periodSeconds: 3
-            failureThreshold: 3
+            initialDelaySeconds: {{ .Values.discoveryfinder.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.discoveryfinder.readinessProbe.periodSeconds }}
+            failureThreshold: {{ .Values.discoveryfinder.readinessProbe.failureThreshold }}
           envFrom:
             - secretRef:
-                name: {{ $sec_name }}
+                name: {{ include "df.fullname" . }}
             - secretRef:
                 name: {{ .Values.postgresql.auth.existingSecret }}
           resources:
