--- a/charts/discoveryfinder/templates/ingress.yaml
+++ b/charts/discoveryfinder/templates/ingress.yaml
@@ -1,34 +1,31 @@
+{{- if .Values.discoveryfinder.ingress.enabled }}
 # Copyright (c) 2023 Robert Bosch Manufacturing Solutions GmbH
 # Copyright (c) 2023 Contributors to the Eclipse Foundation
-  #
-  # See the NOTICE file(s) distributed with this work for additional
-  # information regarding copyright ownership.
-  #
-  # This program and the accompanying materials are made available under the
-  # terms of the Apache License, Version 2.0 which is available at
-  # https://www.apache.org/licenses/LICENSE-2.0.
-  #
-  # Unless required by applicable law or agreed to in writing, software
-  # distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-  # WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-  # License for the specific language governing permissions and limitations
-  # under the License.
-  #
-  # SPDX-License-Identifier: Apache-2.0
-  ###############################################################
+#
+# See the NOTICE file(s) distributed with this work for additional
+# information regarding copyright ownership.
+#
+# This program and the accompanying materials are made available under the
+# terms of the Apache License, Version 2.0 which is available at
+# https://www.apache.org/licenses/LICENSE-2.0.
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
+###############################################################
 
-{{- if .Values.discoveryfinder.ingress.enabled }}
-{{- $deployment_name := printf "cx-%s" .Release.Name }}
-{{- $svc_name := printf "%s-svc" $deployment_name }}
-{{- $ingr_name := printf "%s-ingr" $deployment_name }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $ingr_name }}
+  name: {{ include "df.fullname" . }}
   annotations:
 {{ .Values.discoveryfinder.ingress.annotations | toYaml | indent 4 }}
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    {{- include "df.labels" . | nindent 4 }}
 spec:
   ingressClassName: {{ .Values.discoveryfinder.ingress.className }}
   {{- if .Values.discoveryfinder.ingress.tls }}
@@ -45,7 +42,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ $svc_name }}
+                name: {{ include "df.fullname" . }}
                 port:
                   number: {{ .Values.discoveryfinder.service.port }}
 {{- end }}
