--- a/charts/discoveryfinder/values.yaml
+++ b/charts/discoveryfinder/values.yaml
@@ -16,7 +16,8 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
-
+nameOverride:
+fullnameOverride:
 enablePostgres: true
 
 discoveryfinder:
@@ -45,6 +46,14 @@ discoveryfinder:
   service:
     port: 8080
     type: ClusterIP
+  livenessProbe:
+    failureThreshold: 3
+    periodSeconds: 3
+    initialDelaySeconds: 100
+  readinessProbe:
+    failureThreshold: 3
+    periodSeconds: 3
+    initialDelaySeconds: 100
   dataSource:
     driverClassName: org.postgresql.Driver
     sqlInitPlatform: pg
