--- a/charts/discoveryfinder/templates/deployment.yaml
+++ b/charts/discoveryfinder/templates/deployment.yaml
@@ -73,8 +73,10 @@ spec:
           envFrom:
             - secretRef:
                 name: {{ include "df.fullname" . }}
+            {{- if .Values.enablePostgres }}
             - secretRef:
                 name: {{ .Values.postgresql.auth.existingSecret }}
+            {{- end }}
           resources:
 {{ .Values.discoveryfinder.resources | toYaml | indent 12 }}
       imagePullSecrets:
