--- a/environments/association/discoveryfinder/values.yaml
+++ b/environments/association/discoveryfinder/values.yaml
@@ -27,7 +27,7 @@ discoveryfinder:
     imagePullPolicy: IfNotPresent
   replicaCount: 1
   containerPort: 4243
-  host: localhost
+  host: semantics.int.catena-x.net
   ## If 'authentication' is set to false, no OAuth authentication is enforced
   authentication: true
   ## If initial endpoints need to be created when the application starts, enable the initialEndpoints block and add initialEndpoints.
@@ -63,11 +63,17 @@ discoveryfinder:
     user:
     password:
   ingress:
-    enabled: false
-    tls: false
+    enabled: true
+    tls: true
     urlPrefix: /discoveryfinder
     className: nginx
-    annotations: {}
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      nginx.ingress.kubernetes.io/rewrite-target: /$2
+      nginx.ingress.kubernetes.io/use-regex: "true"
+      nginx.ingress.kubernetes.io/enable-cors: "true"
+      nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+      nginx.ingress.kubernetes.io/x-forwarded-prefix: /discoveryfinder
   resources:
     limits:
       cpu: 750m
@@ -80,13 +86,11 @@ postgresql:
   primary:
     persistence:
       enabled: true
-      size: 50Gi
+      size: 8Gi
   service:
     ports:
       postgresql: 5432
   auth:
     username: catenax
-    password:
+    password: <path:semantics/data/authentication#dbpassword>
     database: discoveryfinder
-    # -- Secret contains passwords for username postgres.
-    existingSecret: secret-discoveryfinder-postgres-init
