--- a/environments/association/discoveryfinder/values.yaml
+++ b/environments/association/discoveryfinder/values.yaml
@@ -1,5 +1,5 @@
-# Copyright (c) 2024 Robert Bosch Manufacturing Solutions GmbH
-# Copyright (c) 2024 Contributors to the Eclipse Foundation
+# Copyright (c) 2023 Robert Bosch Manufacturing Solutions GmbH
+# Copyright (c) 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -16,81 +16,69 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
-nameOverride:
-fullnameOverride:
-enablePostgres: true
 
 discoveryfinder:
-  image:
-    registry: docker.io
-    repository: tractusx/sldt-discovery-finder
-    imagePullPolicy: IfNotPresent
-  replicaCount: 1
-  containerPort: 4243
-  host: semantics.int.demo.catena-x.net
-  ## If 'authentication' is set to false, no OAuth authentication is enforced
-  authentication: true
-  ## If initial endpoints need to be created when the application starts, enable the initialEndpoints block and add initialEndpoints.
-  ## Type and endpointAddress is required is enabled.
-  properties:
-    discoveryfinder:
-  #    initialEndpoints:
-  #      - type:
-  #        endpointAddress:
-  #        description:
-  #        documentation:
-  #        timeToLive:
-  idp:
-    issuerUri: https://idp-url
-    publicClientId: idpClientID
-  service:
-    port: 8080
-    type: ClusterIP
-  livenessProbe:
-    failureThreshold: 3
-    periodSeconds: 3
-    initialDelaySeconds: 100
-  readinessProbe:
-    failureThreshold: 3
-    periodSeconds: 3
-    initialDelaySeconds: 100
-  dataSource:
-    driverClassName: org.postgresql.Driver
-    sqlInitPlatform: pg
-    ## The url, user, and password parameter will be ignored if 'enablePostgres' is set to true.
-    ## In that case the postgresql auth parameters are used.
-    url: jdbc:postgresql://database:5432
-    user:
-    password:
-  ingress:
-    enabled: true
-    tls: true
-    urlPrefix: /discoveryfinder
-    className: nginx
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      nginx.ingress.kubernetes.io/rewrite-target: /$2
-      nginx.ingress.kubernetes.io/use-regex: "true"
-      nginx.ingress.kubernetes.io/enable-cors: "true"
-      nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-      nginx.ingress.kubernetes.io/x-forwarded-prefix: /discoveryfinder
-  resources:
-    limits:
-      cpu: 750m
-      memory: 1024Mi
-    requests:
-      cpu: 250m
-      memory: 1024Mi
-
-postgresql:
-  primary:
-    persistence:
+  enablePostgres: true
+  discoveryfinder:
+    image:
+      imagePullPolicy: IfNotPresent
+    imagePullSecrets:
+      - name: machineuser-pull-secret-ro
+    replicaCount: 1
+    containerPort: 4243
+    host: semantics.int.catena-x.net
+    ## If 'authentication' is set to false, no OAuth authentication is enforced
+    authentication: false
+    properties:
+      discoveryfinder:
+        # Initial Endpoint for edc discovery with type bpn
+        initialEndpoints:
+          - type: bpn
+            endpointAddress: https://portal-backend.int.catena-x.net/api/administration/Connectors/discovery
+            description: Service to discover connector endpoints based on bpns
+            documentation: https://portal-backend.int.catena-x.net/api/administration/swagger/index.html
+            timeToLive: "31536000"
+    idp:
+      issuerUri: <path:semantics/data/commons#keycloak-idp>
+      publicClientId: <path:semantics/data/discoveryfinder#idpClientIdDiscoveryFinder>
+    service:
+      port: 8080
+      type: ClusterIP
+    dataSource:
+      driverClassName: org.postgresql.Driver
+      sqlInitPlatform: pg
+      ## The url, user, and password parameter will be ignored if 'enablePostgres' is set to true.
+      ## In that case the postgresql auth parameters are used.
+      url: jdbc:postgresql://semantic-services-postgresql:5432/discoveryfinder
+      user: catenax
+      password: <path:semantics/data/discoveryfinder#dbpassword>
+    ingress:
       enabled: true
-      size: 8Gi
-  service:
-    ports:
-      postgresql: 5432
-  auth:
-    username: catenax
-    password: <path:semantics/data/authentication#dbpassword>
-    database: discoveryfinder
+      tls: true
+      urlPrefix: /discoveryfinder
+      className: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        nginx.ingress.kubernetes.io/rewrite-target: /$2
+        nginx.ingress.kubernetes.io/use-regex: "true"
+        nginx.ingress.kubernetes.io/enable-cors: "true"
+        nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+        nginx.ingress.kubernetes.io/x-forwarded-prefix: /discoveryfinder
+    resources:
+      limits:
+        memory: "1024Mi"
+      requests:
+        memory: "512Mi"
+
+  postgresql:
+    primary:
+      persistence:
+        enabled: true
+        size: 8Gi
+    service:
+      ports:
+        postgresql: 5432
+    auth:
+      username: catenax
+      password: <path:semantics/data/discoveryfinder#dbpassword>
+      database: discoveryfinder
