--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,6 +39,8 @@ WORKDIR /service
 
 COPY --from=builder /build/backend/target/discovery-finder-backend*.jar app.jar
 
+COPY LICENSE NOTICE.md DEPENDENCIES SECURITY.md /legal/
+
 ENV JAVA_TOOL_OPTIONS "-Xms512m -Xmx2048m"
 EXPOSE 4243
 
