--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -50,6 +50,7 @@ jobs:
           format: "sarif"
           output: "trivy-results1.sarif"
           severity: "CRITICAL,HIGH" # While vulnerabilities of all severities are reported in the SARIF output, the exit code and workflow failure are triggered only by these specified severities (CRITICAL or HIGH).
+          args: "--ignorefile .trivyignore"
           # ignore-unfixed: true
           hide-progress: false
           vuln-type: "os,library"
@@ -88,6 +89,7 @@ jobs:
           format: "sarif"
           output: "trivy-results-discovery-finder.sarif"
           severity: "CRITICAL,HIGH" # While vulnerabilities of all severities are reported in the SARIF output, the exit code and workflow failure are triggered only by these specified severities (CRITICAL or HIGH).
+          args: "--ignorefile .trivyignore"
           # ignore-unfixed: true
           hide-progress: false
           exit-code: "1" # Trivy exits with code 1 if vulnerabilities are found, causing the workflow step to fail.
